--- a/Continuix/src/main/resources/application.properties
+++ b/Continuix/src/main/resources/application.properties
@@ -22,12 +22,12 @@ jwt.expiration=86400000
 logging.level.org.springframework.security=DEBUG
 logging.level.tn.sopra.continuix=DEBUG
 
-# Email SMTP Gmail (?? évite en prod de garder ici)
+#
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=gouzzihamel@gmail.com
 spring.mail.password=zvmrbqljegxxqiku
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-app.frontend.url=http://localhost:4200
-
+# URL de ton front Angular (à adapter après déploiement front)
+app.frontend.url=https://continuix-front.onrender.com
