--- a/ContinuixFront-end/Continuix/package.json
+++ b/ContinuixFront-end/Continuix/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "node node_modules/.bin/ng build --configuration=production",
+    "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-  
   },
   "private": true,
   "dependencies": {
