--- a/ContinuixFront-end/Continuix/angular.json
+++ b/ContinuixFront-end/Continuix/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/continuix",
+            "outputPath": "dist/Continuix",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
