--- a/Continuix/src/main/resources/application.properties
+++ b/Continuix/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.mail.password=zvmrbqljegxxqiku
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # URL de ton front Angular (à adapter après déploiement front)
-app.frontend.url=https://continuix-front.onrender.com
+app.frontend.url=https://projetpfe-angular.onrender.com
