--- a/ContinuixV1/src/main/resources/application.properties
+++ b/ContinuixV1/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=NouveauMotDePasse123!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.open-in-view=false
 # Port HTTP du backend
 server.port=8075
 
