correction build prod311

--- a/ContinuixV1/src/main/resources/application.properties
+++ b/ContinuixV1/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.application.name=Continuix
 spring.datasource.url=jdbc:postgresql://localhost:5432/nouvellebase
 spring.datasource.username=postgres
 spring.datasource.password=NouveauMotDePasse123!
+management.endpoints.web.exposure.include=prometheus,health,info
+# Pas besoin de management.endpoint.prometheus.enabled ni management.metrics.export.prometheus.enabled
 
 # Hibernate
 spring.jpa.show-sql=true
